[gd_scene load_steps=3 format=3 uid="uid://savespanel"]

[ext_resource type="Script" uid="uid://m4fnhbn3newy" path="res://scripts/SavesPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StylePanel"]
bg_color = Color(0.05, 0.08, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.8, 1, 0.3)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="SavesPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 70.0
offset_right = -50.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StylePanel")
script = ExtResource("1")

[node name="SavesVBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SavesHeader" type="HBoxContainer" parent="SavesVBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderTitle" type="Label" parent="SavesVBox/SavesHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 28
text = "Save Games"
vertical_alignment = 1

[node name="SaveScroll" type="ScrollContainer" parent="SavesVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SaveListVBox" type="VBoxContainer" parent="SavesVBox/SaveScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonsRow" type="HBoxContainer" parent="SavesVBox"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="LoadSelected" type="Button" parent="SavesVBox/ButtonsRow"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Load Selected"

[node name="DeleteSelected" type="Button" parent="SavesVBox/ButtonsRow"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "Delete Selected"

[node name="Refresh" type="Button" parent="SavesVBox/ButtonsRow"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
text = "Refresh"

[node name="InfoLabel" type="Label" parent="SavesVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Select a save file to load or delete. Create a new save from home or ship tab."
horizontal_alignment = 1
autowrap_mode = 3
